--- a/LightweightFineTuning.ipynb
+++ b/LightweightFineTuning.ipynb
@@ -31,19 +31,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "8d674e20",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import pandas as pd\n",
@@ -61,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "68d61f57",
    "metadata": {},
    "outputs": [],
@@ -73,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "c216da5d",
    "metadata": {
     "scrolled": true
@@ -90,7 +81,7 @@
        "})"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "0ca492a3",
    "metadata": {
     "scrolled": true
@@ -173,7 +164,7 @@
        "2  https://huggingface.co/datasets/zeroshot/twitt...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "4c0d33f9",
    "metadata": {},
    "outputs": [
@@ -198,7 +189,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "a9e70cb7",
    "metadata": {},
    "outputs": [
@@ -224,7 +215,7 @@
        "})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "2c9a8559",
    "metadata": {},
    "outputs": [],
@@ -256,10 +247,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "1207f04b",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map: 100%|██████████| 6095/6095 [00:02<00:00, 2155.31 examples/s]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -269,7 +267,7 @@
        "})"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "id": "b6314ed5",
    "metadata": {},
    "outputs": [],
@@ -487,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "id": "5775fadf",
    "metadata": {},
    "outputs": [],
@@ -564,7 +562,7 @@
    "execution_count": 14,
    "id": "e613e2d0",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -636,6 +634,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1cdd98d7",
+   "metadata": {},
+   "source": [
+    "## ⚠️ The lora model weights are saved in \"./lora_results\" folder, as specified in TrainingArguments"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "46d3c178",
@@ -648,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0469fcbf",
+   "id": "87e5dad9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -663,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "id": "cb8aa762",
    "metadata": {},
    "outputs": [],
@@ -949,20 +955,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "id": "0423de28",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from peft import PeftModel"
+    "from peft import PeftModel, AutoPeftModelForSequenceClassification"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "id": "68cb80ff",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# base model\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(\"./results/checkpoint-4572\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "c8448e29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lora model: load with AutoPeftModelForSequenceClassification class\n",
+    "lora_model = AutoPeftModelForSequenceClassification.from_pretrained(\"./lora_results/checkpoint-3048\", num_labels=3)\n",
+    "# lora_model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=3)\n",
+    "# lora_model = PeftModel.from_pretrained(lora_model, \"./lora_results/checkpoint-3048\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "d65d832c",
+   "metadata": {
+    "scrolled": true
    },
    "outputs": [
     {
@@ -975,31 +1016,7 @@
     }
    ],
    "source": [
-    "# base model\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(\"./results/checkpoint-4572\") \n",
-    "\n",
-    "# lora model\n",
-    "lora_model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=3)\n",
-    "lora_model = PeftModel.from_pretrained(lora_model, \"./lora_results/checkpoint-3048\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "d65d832c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# qlora model\n",
+    "# qlora model: load with AutoPeftModelForSequenceClassification class\n",
     "config = BitsAndBytesConfig(\n",
     "    load_in_4bit=True,\n",
     "    bnb_4bit_quant_type=\"nf4\",\n",
@@ -1007,13 +1024,15 @@
     "    bnb_4bit_compute_dtype=torch.bfloat16,\n",
     ")\n",
     "\n",
-    "qlora_model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=3, quantization_config=config)\n",
-    "qlora_model = PeftModel.from_pretrained(qlora_model, \"./qlora_results/checkpoint-1524\")"
+    "qlora_model = AutoPeftModelForSequenceClassification.from_pretrained(\n",
+    "    \"./qlora_results/checkpoint-1524\", \n",
+    "    num_labels=3,\n",
+    "    quantization_config=config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "id": "b8e25417",
    "metadata": {},
    "outputs": [],
@@ -1034,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "id": "2956bb0e",
    "metadata": {
     "scrolled": true
